[CHANGE] Change text color to adapt light/dark mode [FIX] Fix little typage error

--- a/frontend/app/assets/css/main.css
+++ b/frontend/app/assets/css/main.css
@@ -68,7 +68,7 @@
   --color-secondary-950: #081a33;
 
   --color-terminal-black: #04080f;
-  --color-terminal-white: #818489;
+  --color-terminal-white: #e7e7e7;
 }
 
 @theme {
@@ -102,9 +102,9 @@
   /* Couleur de background */
   --ui-bg: #f9f8f6;
   --ui-bg-muted: var(--ui-color-neutral-50);
-  --ui-bg-elevated: var(--ui-color-neutral-100);
+  --ui-bg-elevated: var(--ui-color-neutral-300);
   /* --ui-bg-elevated: #df0505; */
-  --ui-bg-accented: var(--ui-color-neutral-200);
+  --ui-bg-accented: var(--ui-color-neutral-400);
   --ui-bg-inverted: var(--ui-color-neutral-900);
 
   /* Couleur des bordures */
